transformed binary interactions into annotations and  adapted XML and ttl templates (CALIPHOMISC-302)

--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -18,7 +18,7 @@
     <property-list>
         #foreach($property in $annotation.getProperties())
 			#if(!$property.getName().equals("rank"))
-				<property property-name='$property.getName()'  value='$property.getValue()' #if($property.getAccession()) accession='$property.getAccession()' #end />
+				<property #if($property.getType()) type='$property.getType()' #end property-name='$property.getName()'  value='$property.getValue()' #if($property.getAccession()) accession='$property.getAccession()' #end />
 			#end
 		#end
     </property-list>
