--- a/web/src/main/webapp/WEB-INF/velocity/entry.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/entry.xml.vm
@@ -6,7 +6,7 @@
     #if($entry.identifiers) #parse('identifier-list.xml.vm') #end
     #if($entry.annotations) #parse('annotation-list.xml.vm') #end
 ##  #if($entry.keywords) #parse('keyword-list.xml.vm') #end
-    #if($entry.interactions) #parse('interaction-list.xml.vm') #end
+##  #if($entry.interactions) #parse('interaction-list.xml.vm') #end ## now treated as annotations (CALIPHOMISC-302)
     #if($NXUtils.hasMappings($entry)) #parse('mapping-list.xml.vm') #end
     #if($entry.publications) #parse('publication-list.xml.vm') #end
     #if($entry.xrefs) #parse('xref-list.xml.vm') #end
