--- a/web/src/main/webapp/WEB-INF/velocity/overview.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/overview.xml.vm
@@ -37,14 +37,21 @@
 #end
 ## ----------------- GENE NAMES ----------------------------------------
 #if($entry.overview.geneNames)
-<gene-name-list>
-#foreach($entityName in $entry.overview.geneNames)
-	<gene-name type="recommended">$entityName.name</gene-name>
-	#foreach($synonym in $entityName.synonyms)
-	<gene-name type="alternative">$synonym.name</gene-name>
-	#end
-#end
-</gene-name-list>
+    <gene-list>
+        #foreach($entityName in $entry.overview.geneNames)
+            <gene>
+                <gene-name type="primary">$entityName.name</gene-name>
+                #foreach($synonym in $entityName.synonyms)
+                #if(!$synonym.category.equals('ORF'))
+			        <gene-name type="synonym">$synonym.name</gene-name>
+			    #end
+			    #if($synonym.category.equals('ORF'))
+			        <gene-name type="ORF">$synonym.name</gene-name>
+			    #end
+                #end
+            </gene>
+        #end
+    </gene-list>
 #end
 ## ----------------- FAMILIES ------------------------------------------
 #if($entry.overview.families.size() > 0)
