--- a/web/src/main/webapp/WEB-INF/velocity/export-header.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/export-header.xml.vm
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <nextprot-export>
+<header>
 <database-name>neXtProt</database-name>
 <entries-count>$entriesCount</entries-count>
