changing attribute in chromosomal location

--- a/web/src/main/webapp/WEB-INF/velocity/chromosomal-location-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/chromosomal-location-list.xml.vm
@@ -2,6 +2,6 @@
 #foreach($chromosomalLocation in $entry.chromosomalLocations)
 	#if( $chromosomalLocation.getAccession().startsWith("ENSG") ) #set ( $accession = $chromosomalLocation.getAccession() )
 	#else #set ( $accession = "" ) #end
-	<chromosomal-location chromosome='$chromosomalLocation.getChromosome()' band='$chromosomalLocation.getBand()' strand='$chromosomalLocation.getStrand()' accession='$accession' geneStart='$chromosomalLocation.getFirstPosition()' geneEnd='$chromosomalLocation.getLastPosition()'/>
+	<chromosomal-location chromosome='$chromosomalLocation.getChromosome()' band='$chromosomalLocation.getBand()' strand='$chromosomalLocation.getStrand()' accession='$accession' gene-start='$chromosomalLocation.getFirstPosition()' gene-end='$chromosomalLocation.getLastPosition()'/>
 #end
 </chromosomal-location-list>
