--- a/web/src/main/webapp/WEB-INF/velocity/release-contents.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/release-contents.xml.vm
@@ -3,13 +3,13 @@
         <database-release>$release.databaseRelease</database-release>
         <api-release>$release.apiRelease</api-release>
       </nextprot>
-      <datasources>
+      <data-source-list>
       	  #foreach($rds in $release.datasources)
- 	     <datasource source='$rds.source' description="$rds.description" release="$rds.releaseVersion" last-import-date="$rds.lastImportDate">
- 		     <datasource-url>
+ 	     <data-source source='$rds.source' description="$rds.description" release="$rds.releaseVersion" last-import-date="$rds.lastImportDate">
+ 		     <url>
  		     <![CDATA[$rds.url]]>
- 		     </datasource-url>
- 	     </datasource>
+ 		     </url>
+ 	     </data-source>
  	     #end
-      </datasources>
+      </data-source-list>
 </release>
