Modify publication.xml.vm elements in XML to meet specifications

--- a/web/src/main/webapp/WEB-INF/velocity/publication.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/publication.xml.vm
@@ -15,10 +15,10 @@
 		#end
 		</authors>
 		#if($publication.dbXrefs.size() > 0)
-		<xrefs>
+		<xref-list>
 		#foreach($xref in $publication.dbXrefs)
 			#parse('xref.xml.vm')								
 		#end
-		</xrefs>
+		</xref-list>
 	#end
 </publication>
