--- a/web/src/main/webapp/WEB-INF/velocity/release-contents.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/release-contents.xml.vm
@@ -1,15 +1,13 @@
 <release>
       <nextprot>
-        <database-release>$release.databaseRelease</database-release>
-        <api-release>$release.apiRelease</api-release>
+          <database-release>$release.databaseRelease</database-release>
+          <api-release>$release.apiRelease</api-release>
       </nextprot>
       <data-source-list>
-      	  #foreach($rds in $release.datasources)
- 	     <data-source source='$rds.source' description="$rds.description" release="$rds.releaseVersion" last-import-date="$rds.lastImportDate">
- 		     <url>
- 		     <![CDATA[$rds.url]]>
- 		     </url>
- 	     </data-source>
- 	     #end
+          #foreach($rds in $release.datasources)
+              <data-source source='$rds.source' description="$rds.description" release="$rds.releaseVersion" last-import-date="$rds.lastImportDate">
+                  <url><![CDATA[$rds.url]]></url>
+              </data-source>
+          #end
       </data-source-list>
 </release>
