--- a/web/src/main/webapp/WEB-INF/velocity/chromosomal-location-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/chromosomal-location-list.xml.vm
@@ -1,7 +1,5 @@
 <chromosomal-location-list>
 #foreach($chromosomalLocation in $entry.chromosomalLocations)
-	#if( $chromosomalLocation.getAccession().startsWith("ENSG") ) #set ( $accession = $chromosomalLocation.getAccession() )
-	#else #set ( $accession = "" ) #end
-	<chromosomal-location chromosome='$chromosomalLocation.getChromosome()' band='$chromosomalLocation.getBand()' strand='$chromosomalLocation.getStrand()' accession='$accession' gene-start='$chromosomalLocation.getFirstPosition()' gene-end='$chromosomalLocation.getLastPosition()'/>
+	<chromosomal-location chromosome='$chromosomalLocation.getChromosome()' band='$chromosomalLocation.getBand()' strand='$chromosomalLocation.getStrand()' accession='$chromosomalLocation.getAccession()' gene-start='$chromosomalLocation.getFirstPosition()' gene-end='$chromosomalLocation.getLastPosition()'/>
 #end
 </chromosomal-location-list>
