--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -18,7 +18,7 @@
     <property-list>
         #foreach($property in $annotation.getProperties())
 			#if(!$property.getName().equals("rank"))
-				<property property-name='$property.getName()'  value='$property.getValue()' #if($property.getValueType()) value-type='$property.getValueType()' #end #if($property.getAccession()) accession='$property.getAccession()' #end />
+				<property name='$property.getName()'  value='$property.getValue()' #if($property.getValueType()) value-type='$property.getValueType()' #end #if($property.getAccession()) accession='$property.getAccession()' #end />
 			#end
 		#end
     </property-list>
@@ -31,7 +31,7 @@
 				#if($evidence.getPropertiesNames())
 					<property-list>
 						#foreach($pk in $evidence.getPropertiesNames())
-							<property property-name="$pk" value="$evidence.getPropertyValue($pk)" />
+							<property name="$pk" value="$evidence.getPropertyValue($pk)" />
 						#end
 					</property-list>
 				#end
