Removing <name> in cv-term, the content of names comes into the cv-term text node

--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -1,8 +1,6 @@
 <annotation quality-qualifier='$annotation.getQualityQualifier()' #if($annotation.synonym)accession="$annotation.synonym" database='neXtProt'#end>
 	#if($annotation.getCvTermName())
-    <cv-term accession='$annotation.getCvTermAccessionCode()'>
-    	<name>$annotation.getCvTermName()</name>
-    </cv-term>
+    <cv-term accession='$annotation.getCvTermAccessionCode()'>$annotation.getCvTermName()</cv-term>
     #end
 	#if($annotation.getDescription())
     <description>
