--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -14,7 +14,7 @@
 
 	#if($annotation.getBioObject())
 		#set($bioObject = $annotation.getBioObject())
-        <interactant nature='$bioObject.getBioType().toString().toLowerCase()'>
+        <interactant nature='new StringCaseFormatter($bioObject.getBioType().toString()).camel().kebab().format()'>
             #if($bioObject.getResourceType().toString().equals("EXTERNAL"))
                 <xref-ref resource-internal-ref='$bioObject.getId()'/>
 			#elseif($bioObject.getResourceType().toString().equals("INTERNAL"))
