--- a/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation-list.ttl.vm
@@ -25,9 +25,12 @@ isoform:$isoform-name :$parentPredicate annotation:$annotation-uri .
 #end
 isoform:$isoform-name :$annotation.rdfPredicate annotation:$annotation-uri .
 ## special case for expression
-#if($annotation.getConsensusExpressionLevelPredicat())
-isoform:$isoform-name :$annotation.getConsensusExpressionLevelPredicat() annotation:$annotation-uri .
-#end
+isoform:$isoform-name #if($annotation.isExpressionLevelDetected()):detectedExpression#else:undetectedExpression#end annotation:$annotation-uri .
+
+##if($annotation.getConsensusExpressionLevelPredicat())
+## isoform:$isoform-name :$annotation.getConsensusExpressionLevelPredicat() annotation:$annotation-uri .
+##end
+
 #parse("turtle/isoform-annotation.ttl.vm")
 #end
 #end
